--- a/requirements.txt
+++ b/requirements.txt
@@ -18,7 +18,8 @@ llvmlite==0.44.0
 MarkupSafe==3.0.2
 narwhals==1.32.0
 numba==0.61.0
-numpy==2.1.3
+#numpy==2.1.3
+numpy
 packaging==24.2
 pandas==2.2.3
 pillow==11.1.0
